<resources>
    <string name="app_name">Class Manager</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_registration">Register!</string>
    <string name="title_activity_chat">Chat!</string>
    <string name="action_chat_button">Chat!</string>
    <string name="title_activity_class_add_list">Register Class</string>
    <string name="title_discussion_board">Discussion Board</string>

    <!-- Strings related to login -->
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="finish_signIn_text">Welcome back %s! Click finish to get Started!</string>
    <string name="finish_registration_text">Welcome %s! Thank you for registering with Class Manager, click finish to get Started!</string>
    <string name="finish">Proceed</string>
    <string name="quit">quit</string>
    <string name="yes">yes</string>
    <string name="really_quit">really_quit</string>
    <string name="Verify">Verify</string>
    <string name="ReVerify">Resend Link</string>
    <string name="no">no</string>
    <string name="sign_out">Sign Out</string>

    <!-- Strings related to Class Creation -->
    <string name="title_activity_creator">Class Add</string>
    <string name="class_id_prompt">Class ID</string>
    <string name="class_id_hint">ID</string>
    <string name="class_days_prompt">Days</string>
    <string name="class_days_hint">Days</string>
    <string name="class_startTime_prompt">Start Time</string>
    <string name="class_startTime_hint">12:00 PM</string>
    <string name="class_endTime_prompt">End Time</string>
    <string name="class_endTime_hint">12:00 PM</string>
    <string name="class_room_prompt">Class Room</string>
    <string name="class_room_hint">Olsen 305</string>

    <!-- Strings related to Assignment Activity in dropdown -->
    <string name="grade_string">Grade: </string>
    <string name="duedate_string">Due: </string>

    <!-- Strings related to Sign in dropdown -->
    <string name="action_sign_out">Sign Out</string>
    <string name="action_change_account">Change Account</string>

    <!-- Strings related to Class Activity dropdown -->
    <string name="action_add_class">Add Class</string>
    <string name="action_create_class">Create Class</string>
    <string name="action_remove_class">Remove Class</string>
    <string name="action_drop_class">Drop Class</string>
    <string name="action_cancel_class">Delete Class</string>

    <!-- Strings related to Class Editor Activity  -->
    <string name="class_name_hint">Class</string>
    <string name="class_name_prompt">Class Name</string>

    <!-- Strings related to Class Add List Activity  -->
    <string name="no_classes">Sorry, no classes offered</string>

    <!-- Utility -->
    <string name="no_internet_connection">No Internet</string>
    <string name="account_level_prompt">Account Level: </string>

    <!-- Strings related to Calendar Activity  -->
    <string name="calendarAccountLabel">Google Account: </string>
    <string name="calendarAccountButton">Default Text</string>
    <string name="calendarAccountHelpText">Click to select an account</string>
    <string name="calendarToggleLabel">Enable Google Calendar</string>
    <string name="calendarToggleHelpText">Allow adding events to your Google Calendar</string>
    <string name="calendarViewButton">View Google Calendar</string>
    <string name="new_assignment">New Assignment</string>
    <string name="input">Input</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="syllabus">Syllabus</string>
    <string name="attendance">Attendance</string>
    <string name="discussion_board">Discussion Board</string>
    <string name="assignments">Assignments</string>
    <string name="grades">Grades</string>
    <string name="students">Students</string>
    <string name="members">Members</string>
    <string name="by_line">Made By: Cam Cambell, Dave DaCosta, Jake Adamson, Rob Cucchiara</string>
    <string name="ncontact_info">\nContact Info:</string>
    <string name="emails">\tEmail: someone@classManager.com</string>
    <string name="phone">\tPhone: 123 456 7890</string>
    <string name="taddress_123_some_st_lowell_ma">\tAddress: 123 Some St, Lowell Ma</string>
    <string name="classroom_manager">Classroom Manager\n</string>
    <string name="my_classes">My Classes</string>
    <string name="notifications">Notifications</string>
    <string name="calendar">Calendar</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="find_file">find file</string>
    <string name="assignment_in_upload">Assignment:</string>
    <string name="date_hint">11/8/2016</string>
    <string name="due_date">Due Date:</string>
    <string name="assignment_name">Assignment Name:</string>
    <string name="add">add</string>
    <string name="homework_project__hint">homework/project</string>
    <string name="logout">Logout</string>
    <string name="syllabus_upload_hint">We found these files, which would you like to upload?</string>
    <string name="class_name_placeholder">class_name</string>
    <string name="class_day_placeholder">class_day</string>
    <string name="_placeholder">class_time</string>
    <string name="class_room_placeholder">class_room</string>
    <string name="class_id_placeholder">class_id</string>
    <string name="hw1_placeholder">HW1:</string>
    <string name="grade_a_placeholder">Grade: A</string>
    <string name="first_last_name">first last</string>
    <string name="id_goes_here_placeholder">id goes here</string>
    <string name="submitted_grading">Submitted:</string>
    <string name="true_false_placeholder">true/false</string>
    <string name="grade_grading">Grade:</string>
    <string name="number_not_yet_graded_placeholder">number/not yet graded</string>
    <string name="file_path_placeholder">file path here</string>
    <string name="file_name_placeholder">file name</string>

    <!-- Strings related to Attendance Activity -->
    <string name="attendanceCheckinButton">Check-In</string>
    <string name="attendanceCheckinLabel">Press to check-in to this class</string>
    <string name="attendancePlaceHolderText">Place Holder Text</string>
    <string name="attendanceClassLabel">Class: </string>
    <string name="attendanceClassTime">Time: </string>
    <string name="attendanceClassDays">Days: </string>

</resources>