<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="6dp">

    <TextView
        android:id="@+id/grading_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/first_last_name"
        android:textColor="@android:color/black"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/grading_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_goes_here_placeholder"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitted_grading"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/grading_work_submitted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/true_false_placeholder"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade_grading"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/grading_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/number_not_yet_graded_placeholder"/>

    </LinearLayout>

    <TextView
        android:id="@+id/grading_file_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_path_placeholder"
        android:visibility="gone"/>

</LinearLayout>