<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/assignment_name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/new_assignment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/homework_project__hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/due_date"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/new_assignment_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:inputType="date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignment_in_upload"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/new_assignment_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"/>

        <TextView
            android:id="@+id/new_assignment_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/new_assignment_find_file_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/new_assignment_find_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_file"
                />

        </LinearLayout>

    </LinearLayout>
    
    <ListView
        android:id="@+id/new_assignment_file_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/new_assignment_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

    </LinearLayout>

</LinearLayout>